<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingVertical="10dp"
    android:paddingHorizontal="5dp">

    <TextView
        android:id="@+id/siteUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/site_placeholder"
        android:textSize="16sp"
        android:layout_marginStart="4dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:id="@+id/durationIcon"
        android:layout_below="@+id/siteUrl"
        android:layout_alignParentStart="true"
        android:src="@drawable/ic_duration"
        android:contentDescription="@string/duration_desc"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration_placeholder"
        android:id="@+id/duration"
        android:layout_below="@+id/siteUrl"
        android:layout_toEndOf="@+id/durationIcon"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_placeholder"
        android:id="@+id/startTime"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="4dp"/>

</RelativeLayout>