<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SiteHistoryActivity">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:orientation="horizontal"
                    android:id="@+id/dateHeader"
                    android:padding="20dp"
                    android:gravity="center_vertical"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="showDatePicker"
                    tools:ignore="UseCompoundDrawables">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/dateText"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:text="@string/date_placeholder">
                    </TextView>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="18sp"
                        android:src="@drawable/ic_edit"
                        android:contentDescription="@string/change_date">
                    </ImageView>
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:id="@+id/siteHistoryList"
                    android:nestedScrollingEnabled="false"
                    android:layout_below="@+id/dateHeader"
                    android:layout_marginHorizontal="10dp"/>
            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        android:id="@+id/emptyListContent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/emptyListIcon"
            android:src="@drawable/ic_empty">
        </ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/emptyListIcon"
            android:layout_centerHorizontal="true"
            android:id="@+id/emptyListText">
        </TextView>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/emptyListText"
            android:layout_centerHorizontal="true"
            android:onClick="refreshList"
            android:text="@string/refresh">
        </Button>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/errorContent"
        android:visibility="invisible">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/errorIcon"
            android:src="@drawable/ic_error">
        </ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/errorIcon"
            android:layout_centerHorizontal="true"
            android:id="@+id/errorText"
            android:text="@string/list_load_error">
        </TextView>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/errorText"
            android:layout_centerHorizontal="true"
            android:onClick="refreshList"
            android:text="@string/retry">
        </Button>
    </RelativeLayout>
</RelativeLayout>